# Pixbots-G

./: .geminirules  .gitignore  CLAUDE_CODE_HANDOFF.md  DISCLOSURES.md  FEATURE_ROADMAP.md  GAME_IMPROVEMENT_SUGGESTIONS.md  MODDING.md  MainMenu.tscn  README.md  STORY_SCRIPT.md  Status.md  build_and_release.ps1  build_csharp_installer.ps1  build_installer.ps1  campaign.json  character_body_2d.tscn  compile_dialogue.py  diff.txt  export_presets.cfg  freeze_test.gd  icon.svg.import  inject_monologues.py  main.tscn  mod_guide_text.txt  patch_phase2.py  patch_phase3.py  patch_projectile.py  patch_renderer.py  playtest_protocol.md  project.godot  rewrite.py  rewrite.sh  rust_ext.gdextension  rust_ext.gdextension.uid  settings.cfg  test2.gd  test3.gd  test_build.gd  test_combat.gd  test_energy_routing.gd  (+15 more)
.github/workflows/: build_and_release.yml  export.yml
archive/attack_prototypes/: AcidBall.gd.uid  ExplosionBlast.gd  ExplosionBlast.gd.uid  FireProjectile.gd.uid  FireResidue.gd  FireResidue.gd.uid  IceCone.gd.uid  KineticBeam.gd.uid  LightningChain.gd.uid  PierceRay.gd  PierceRay.gd.uid  README.md  VampiricBat.gd.uid  VortexSwirl.gd.uid
config/: default_squads.json  dialogue.json
config/cutscenes/: evan_scrap_pitch.json  frank_scrap_pitch.json  manifest.json  tutorial_welcome.json
config/demo_builds/: gunner.json  (+4 more)
installer/: pixbots.iss
rust_ext/: Cargo.toml  README.md
rust_ext/src/: hexgrid_sim.rs  hexmath.rs  lib.rs  part_rasterizer.rs  procedural_shape.rs  projectile_broadphase.rs  projectile_flight.rs  terrain_rasterizer.rs
rust_poc/: README.md  hexgrid.rs
(+724 files in other folders)
